# TrinityGauntlet

./: .gitignore  README.md  game.py  gesture_recognition.py  main.py  pyproject.toml  requirements.txt  rps_serial_controller.py  rps_sim_controller.py
.mpl-cache/: fontlist-v390.json
debug_logs/: detections.jsonl  rounds.jsonl
ros2_sim_ws/: README.md
ros2_sim_ws/src/rps_hand_sim/: package.xml  setup.cfg  setup.py
ros2_sim_ws/src/rps_hand_sim/config/: controllers.yaml
ros2_sim_ws/src/rps_hand_sim/launch/: bringup.launch.py
ros2_sim_ws/src/rps_hand_sim/resource/: rps_hand_sim
ros2_sim_ws/src/rps_hand_sim/rviz/: rps_hand.rviz  rps_hand_clean.rviz
ros2_sim_ws/src/rps_hand_sim/urdf/: rps_hand.urdf
rps_robot_hand/: rps_robot_hand.ino
