<?xml version="1.0"?>
<package format="3">
  <name>rps_hand_sim</name>
  <version>0.1.0</version>
  <description>Two-joint Rock Paper Scissors hand simulation for Gazebo and RViz.</description>
  <maintainer email="you@example.com">TrinityGauntlet Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
